# If you already have [package] information in `Cargo.toml`, you can ignore
# this section!
[package]
# `name` here is name of the package.
name = "pyo3-nalgebra-example"
# these are good defaults:
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pyo3_nalgebra_example"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
nalgebra = "*"
numpy = { git = "https://github.com/PyO3/rust-numpy" , features=["nalgebra"]}
# The rust-numpy crate does not support PyO3 version 0.21.0, so use the latest crate from GitHub.
# In the near future, version 0.21.0 of rust-numpy will probably be released. At that time, comment out the following.
# numpy = { version = "0.21.0", features=["nalgebra"]}